--- a/messenger.html
+++ b/messenger.html
@@ -1,69 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Messenger</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-</head>
-<body>
-	<div class="vh-100 d-flex p-2 gap-2" style="background-color: #18181f;">
-		<div class="col-12 col-md-3 bg-dark rounded-3 overflow-auto">
-			<div class="p-2 d-flex gap-3 align-items-center user-select-none pe-none">
-				<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/50?img=11" alt=""></div>
-				<div class="text-light"><span class="lead">John Doe</span></div>
-			</div>
-			<div class="p-2 d-flex gap-3 align-items-center user-select-none pe-none">
-				<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/50?img=11" alt=""></div>
-				<div class="text-light"><span class="lead">John Doe</span></div>
-			</div>
-			<div class="p-2 d-flex gap-3 align-items-center user-select-none pe-none">
-				<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/50?img=11" alt=""></div>
-				<div class="text-light"><span class="lead">John Doe</span></div>
-			</div>
-			<div class="p-2 d-flex gap-3 align-items-center user-select-none pe-none bg-secondary">
-				<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/50?img=13" alt=""></div>
-				<div class="text-light"><span class="lead">John Doe</span></div>
-			</div>
-			<div class="p-2 d-flex gap-3 align-items-center user-select-none pe-none">
-				<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/50?img=11" alt=""></div>
-				<div class="text-light"><span class="lead">John Doe</span></div>
-			</div>
-			<div class="p-2 d-flex gap-3 align-items-center user-select-none pe-none">
-				<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/50?img=11" alt=""></div>
-				<div class="text-light"><span class="lead">John Doe</span></div>
-			</div>
-			<div class="p-2 d-flex gap-3 align-items-center user-select-none pe-none">
-				<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/50?img=11" alt=""></div>
-				<div class="text-light"><span class="lead">John Doe</span></div>
-			</div>
-			<div class="p-2 d-flex gap-3 align-items-center user-select-none pe-none">
-				<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/50?img=11" alt=""></div>
-				<div class="text-light"><span class="lead">John Doe</span></div>
-			</div>
-			<div class="p-2 d-flex gap-3 align-items-center user-select-none pe-none">
-				<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/50?img=11" alt=""></div>
-				<div class="text-light"><span class="lead">John Doe</span></div>
-			</div>
-			<div class="p-2 d-flex gap-3 align-items-center user-select-none pe-none">
-				<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/50?img=11" alt=""></div>
-				<div class="text-light"><span class="lead">John Doe</span></div>
-			</div>
-		</div>
-		<div class="w-75 d-none d-md-flex flex-column">
-			<div class="bg-dark p-2 text-light rounded-3"><span class="lead">John Doe</span></div>
-			<div class="h-100"></div>
-			<div class="bg-dark p-2 gap-2 rounded-3 d-flex">
-				<input type="text" class="form-control bg-dark border-dark text-light" placeholder="Enter Message...">
-				<button class="btn btn-outline-secondary">Send</button>
-			</div>
-		</div>
-		<div class="d-none d-xl-block bg-dark rounded-3 p-3 text-light">
-			<div class="rounded-circle overflow-hidden"><img src="https://i.pravatar.cc/200?img=13" alt=""></div>
-			<div class="p-2 lead text-center"><span>John Doe</span></div>
-		</div>
-	</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Messenger</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <div class="vh-100 d-flex p-2 gap-2" style="background-color: #18181f">
+      <div class="col-12 col-md-2 bg-dark rounded-3 overflow-auto">
+        <div
+          class="p-2 d-flex gap-3 align-items-center user-select-none pe-none"
+        >
+          <div class="rounded-circle overflow-hidden">
+            <img src="https://i.pravatar.cc/50?img=11" alt="" />
+          </div>
+          <div class="text-light"><span class="lead">John Doe</span></div>
+        </div>
+        <div
+          class="p-2 d-flex gap-3 align-items-center user-select-none pe-none"
+        >
+          <div class="rounded-circle overflow-hidden">
+            <img src="https://i.pravatar.cc/50?img=11" alt="" />
+          </div>
+          <div class="text-light"><span class="lead">John Doe</span></div>
+        </div>
+        <div
+          class="p-2 d-flex gap-3 align-items-center user-select-none pe-none"
+        >
+          <div class="rounded-circle overflow-hidden">
+            <img src="https://i.pravatar.cc/50?img=11" alt="" />
+          </div>
+          <div class="text-light"><span class="lead">John Doe</span></div>
+        </div>
+        <div
+          class="p-2 d-flex gap-3 align-items-center user-select-none pe-none bg-secondary"
+        >
+          <div class="rounded-circle overflow-hidden">
+            <img src="https://i.pravatar.cc/50?img=13" alt="" />
+          </div>
+          <div class="text-light"><span class="lead">John Doe</span></div>
+        </div>
+        <div
+          class="p-2 d-flex gap-3 align-items-center user-select-none pe-none"
+        >
+          <div class="rounded-circle overflow-hidden">
+            <img src="https://i.pravatar.cc/50?img=11" alt="" />
+          </div>
+          <div class="text-light"><span class="lead">John Doe</span></div>
+        </div>
+        <div
+          class="p-2 d-flex gap-3 align-items-center user-select-none pe-none"
+        >
+          <div class="rounded-circle overflow-hidden">
+            <img src="https://i.pravatar.cc/50?img=11" alt="" />
+          </div>
+          <div class="text-light"><span class="lead">John Doe</span></div>
+        </div>
+        <div
+          class="p-2 d-flex gap-3 align-items-center user-select-none pe-none"
+        >
+          <div class="rounded-circle overflow-hidden">
+            <img src="https://i.pravatar.cc/50?img=11" alt="" />
+          </div>
+          <div class="text-light"><span class="lead">John Doe</span></div>
+        </div>
+        <div
+          class="p-2 d-flex gap-3 align-items-center user-select-none pe-none"
+        >
+          <div class="rounded-circle overflow-hidden">
+            <img src="https://i.pravatar.cc/50?img=11" alt="" />
+          </div>
+          <div class="text-light"><span class="lead">John Doe</span></div>
+        </div>
+        <div
+          class="p-2 d-flex gap-3 align-items-center user-select-none pe-none"
+        >
+          <div class="rounded-circle overflow-hidden">
+            <img src="https://i.pravatar.cc/50?img=11" alt="" />
+          </div>
+          <div class="text-light"><span class="lead">John Doe</span></div>
+        </div>
+        <div
+          class="p-2 d-flex gap-3 align-items-center user-select-none pe-none"
+        >
+          <div class="rounded-circle overflow-hidden">
+            <img src="https://i.pravatar.cc/50?img=11" alt="" />
+          </div>
+          <div class="text-light"><span class="lead">John Doe</span></div>
+        </div>
+      </div>
+      <div class="w-75 d-none d-md-flex flex-column">
+        <div class="bg-dark p-2 text-light rounded-3"><span class="lead">John Doe</span></div>
+        <div class="h-100"></div>
+        <div class="bg-dark p-2 gap-2 rounded-3 d-flex">
+          <input type="text" class="form-control bg-dark border-dark text-light" placeholder="Enter Message..." />
+          <button class="btn btn-outline-secondary">Send</button>
+        </div>
+      </div>
+      <div class="d-none d-xl-block bg-dark rounded-3 p-3 text-light">
+        <div class="rounded-circle overflow-hidden">
+          <img src="https://i.pravatar.cc/200?img=13" alt="" />
+        </div>
+        <div class="p-2 lead text-center"><span>John Doe</span></div>
+        <div class="buttons mt-5 text-center">
+          <div class="mb-5">
+            <button class="btn btn-success w-100">Video Call</button>
+            <button class="btn btn-success w-100 mt-3">Voice Call</button>
+          </div>
+		  <button class="btn btn-danger w-75 mt-5 ">Block Contact</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
